# build-deep-research-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yaml  pyproject.toml
.agents/skills/marimo-pair/: SKILL.md
.agents/skills/marimo-pair/reference/: finding-marimo.md  gotchas.md
.devcontainer/: devcontainer.json
.github/workflows/: code-style.yaml  docs.yaml  pr-tests.yaml  release-pypi-package.yaml
.llamabot/: message_log.db
.opencode/agent/: notebook-consistency-reviewer.md  tutorial-pedagogy-reviewer.md
.opencode/command/: review-consistency.md  review-pedagogy.md
build_deep_research_agent/: __init__.py  agents.py  bootstrap.py  cli.py  deterministic_agent.py  llm.py  memory.py  models.py  prompts.py  research_tools.py  schemas.py  utils.py  workflows.py
build_deep_research_agent/exercises/: __init__.py  part2.py  part3.py  part4.py
build_deep_research_agent/exercises/solutions/: __init__.py  part2.py  part3.py  part4.py
build_deep_research_agent/fixtures/: __init__.py  loader.py  search.py  zotero_library.json
build_deep_research_agent/fixtures/corpus/: arxiv_0908.4044.md  arxiv_0909.3874.md  arxiv_0910.2580.md  arxiv_1211.0310.md  arxiv_1409.4147.md  arxiv_1510.06340.md  arxiv_1705.09868.md  arxiv_1711.10540.md  arxiv_1803.04479.md  arxiv_1812.01662.md  arxiv_1905.12588.md  arxiv_1910.03081.md  arxiv_1910.08177.md  arxiv_1912.13440.md  arxiv_2005.08736.md  arxiv_2108.06446.md  arxiv_2207.05682.md  arxiv_2304.12244.md  arxiv_2306.08568.md  arxiv_2308.16149.md  arxiv_2310.00034.md  arxiv_2310.11466.md  arxiv_2312.10793.md  arxiv_2409.08759.md  arxiv_2504.06806.md  arxiv_2504.11554.md  arxiv_2506.09781.md  arxiv_2601.00656.md  arxiv_2601.02506.md  arxiv_2605.26749.md  arxiv_cond-mat_0506797.md  joss_10_21105_joss_04642.md  joss_10_21105_joss_04739.md  joss_10_21105_joss_05352.md  joss_10_21105_joss_05397.md  joss_10_21105_joss_05744.md  joss_10_21105_joss_06011.md  joss_10_21105_joss_06803.md  joss_10_21105_joss_09436.md  joss_10_21105_joss_09468.md
build_deep_research_agent/mcp/: __init__.py  client.py  docstore.py  server.py  zotero_backend.py
build_deep_research_agent/tools/: __init__.py  corpus.py  zotero.py
docs/: api.md  high-level-design.md  index.md
docs/designs/embedded-mcp/: LLD.md  docstore-retrieval-EARS.md  dual-mode-runtime-EARS.md  embedded-mcp-server-EARS.md
docs/designs/mcp-tools/: LLD.md  docstore-retrieval-EARS.md  dual-mode-runtime-EARS.md  mcp-tools-EARS.md
docs/designs/memory/: LLD.md  chat-history-EARS.md  citation-memory-EARS.md  memory-comparison-EARS.md  memory-docstore-EARS.md  part2-exercises-plan.md
docs/designs/multi-agent/: LLD.md  discussion-prompts-EARS.md  failure-mode-demos-EARS.md  searcher-synthesizer-EARS.md
docs/designs/planning/: LLD.md  deterministic-workflow-EARS.md  react-runner-EARS.md  workflow-comparison-EARS.md
docs/designs/prompting/: LLD.md  fixtures-EARS.md  static-summarization-EARS.md  system-prompt-EARS.md
docs/designs/tools/: LLD.md  live-summarization-EARS.md  mcp-connection-EARS.md  tutorial-zotero-mcp-EARS.md  zotero-search-EARS.md
docs/designs/tutorial-delivery/: LLD.md  classroom-infrastructure-EARS.md  marimo-conventions-EARS.md  shared-models-EARS.md
docs/research/: adult-learning-pedagogy-for-technical-tutorials.md
notebooks/: 00_check.py  01_intro_prompting.py  02_memory_state.py  03_tools_mcp_zotero.py  04_workflows.py  05_bonus_architectures.py  05_multi_agent_demo.py
scripts/: experiment_agentbot_toolcall.py  experiment_coding_agent_fast.py  experiment_coding_agent_patch.py  experiment_reliability.py  fetch_corpus.py  serve_corpus_mcp.py  serve_corpus_mcp_starter.py  serve_zotero_mcp.py  verify_fix.py
tests/: conftest.py  test___init__.py  test_agents.py  test_cli.py  test_deterministic_agent.py  test_docstore.py  test_exercises_part2.py  test_exercises_part4.py  test_fixtures.py  test_llm.py  test_mcp_client.py  test_models.py  test_notebook_startup_validation.py  test_prompts.py  test_workflows.py
