# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["build_deep_research_agent"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for a list of rules.
# See https://docs.astral.sh/ruff/configuration/#using-pyprojecttoml for configuration documentation
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/experiment_*.py" = ["E402"]
"scripts/verify_fix.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "examples", "notebooks", ".agents", "scripts"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 2
quiet = false
whitelist-regex = []
color = true

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report term-missing"
testpaths = [
    "tests",
]

[tool.pydoclint]
style = 'sphinx'
exclude = '\.git|\.tox|tests/data'
require-return-section-when-returning-nothing = false
arg-type-hints-in-docstring = false
check-return-types = false

[project]
name = "build-deep-research-agent"
version = "0.0.1"
# NOTE: move dependencies into this section if you need to distribute the project as a Python package.
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas",
    "scikit-learn",
    "numpy",
    "pyprojroot",
    "scipy",
    "pymc",
    "seaborn",
    "python-dotenv",
    "typer",
    "llamabot[rag]>=0.19.8",
    "marimo>=0.23.0",
    "loguru",
    "pydantic",
    "fastmcp",  # @spec EMCP-SRV-002
    "pyzotero",
    "pocketflow",
    "transformers<5",
    "pymupdf",  # PDF -> text extraction for the Zotero full-text docstore (Part 3 stretch)
    "ipython",
    "wigglystuff",  # transformers imports IPython.display in a path sentence-transformers triggers eagerly; without it LanceDBDocStore init fails silently
]
readme = "README.md"

[project.scripts]
build-deep-research-agent = "build_deep_research_agent.cli:app"
tutorial-zotero-mcp = "build_deep_research_agent.mcp.server:main"  # @spec TOOLS-TUT-002


[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
build-deep-research-agent = { path = ".", editable = true }

# NOTE: Core dependencies (needed for running the program) go here.
[tool.pixi.dependencies]
python = "3.12.*"

# NOTE: Testing dependencies (not needed for running program) go here.
[tool.pixi.feature.tests.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "*"

[tool.pixi.feature.devtools.dependencies]
pre-commit = "*"
hatch = "*"
ruff = "*"

[tool.pixi.feature.tests.tasks]
test = "pytest"

[tool.pixi.feature.devtools.tasks]
lint = "pre-commit run --all-files"
commit = "git commit"
marimo = "marimo edit --no-sandbox --no-token notebooks/"  # @spec TUT-SETUP-012 use the project Pixi env, not an isolated sandbox
checkenv = "marimo edit --no-sandbox --no-token notebooks/00_check.py"  # @spec TUT-INFRA-006 open the environment-check notebook (.env setup + endpoint ping)
nb1 = "marimo edit --no-sandbox --no-token notebooks/01_intro_prompting.py"

[tool.pixi.feature.setup.tasks]
setup = "pre-commit autoupdate && pre-commit install --install-hooks"
update = "pre-commit autoupdate"

[tool.pixi.environments]
default = { features = ["tests", "devtools", "setup"] }
tests = { features = ["tests", "setup"] }
